--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -39,70 +39,68 @@
 }
 
 .Mainsection {
-  display: block;
-  background-color: white;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
+    display: block;
+    position: relative;
+    background-color: white;
+    padding: 5px;
+    margin-top: 100vh;
+    width: 100%;
 
-  h2 {
-    font-family: robotoL;
-    text-align: center;
-    color: black;
-  }
+    h2 {
+        font-family: robotoL;
+        text-align: center;
+        color: black;
+    }
 
-  p {
-    font-family: robotoM;
-    text-align: center;
-    color: black;
-  }
+    p {
+        font-family: robotoM;
+        text-align: center;
+        color: black;
+    }
 }
 
 .section {
-  display: block;
-  background-color: white;
-  left: 0;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  width: 100%;
-  top: 200px;
-
-  h2 {
-    font-family: robotoL;
-    text-align: center;
-    color: black;
-  }
-
-  p {
-    font-family: robotoM;
-    text-align: center;
-    color: black;
-  }
-
-  table {
-    font-family: robotoM;
-    text-align: center;
-    color: black;
-    table-layout: fixed;
+    display: block;
+    position: relative;
+    background-color: white;
     width: 100%;
+    padding: 5px;
 
-    tr td {
-      padding: 10px;
-      width: 25%;
-
-      div {
-        position: relative;
-        overflow: hidden;
-
-        img {
-          max-width: 100%;
-          max-height: 100%;
-          object-fit: contain;
-        }
-      }
+    h2 {
+        font-family: robotoL;
+        text-align: center;
+        color: black;
     }
-  }
+
+    p {
+        font-family: robotoM;
+        text-align: center;
+        color: black;
+    }
+
+    table {
+        font-family: robotoM;
+        text-align: center;
+        color: black;
+        table-layout: fixed;
+        width: 100%;
+
+        tr td {
+            padding: 10px;
+            width: 25%;
+
+            div {
+                position: relative;
+                overflow: hidden;
+
+                img {
+                    max-width: 100%;
+                    max-height: 100%;
+                    object-fit: contain;
+                }
+            }
+        }
+    }
 }
 
 p {
@@ -111,8 +109,10 @@ p {
 }
 
 body {
-  background-image: url("../public/background.png");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+    background-image: url("../public/background.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    overflow-x: hidden;
+    margin: 0;
 }
